# TPM-MLX

./: .gitignore  BENCHMARKS.md  LICENSE  README.md  pyproject.toml  whyTPM.md
src/tpm_mlx/: __init__.py  cli.py  engine.py  server.py  utils.py
src/tpm_mlx/static/: playground.html
tests/: benchmark.py  generate_charts.py  test_engine.py  test_perf_harness.py  test_perf_harness_12b.py  test_perf_harness_e2b.py
